Improve grammar and clarity across documentation
This commit refines grammar, punctuation, and clarity throughout multiple documentation and guide files. Changes include correcting typos, improving sentence structure, and enhancing consistency in instructions and descriptions for better readability and professionalism.

--- a/src/pages/doh/edge.mdx
+++ b/src/pages/doh/edge.mdx
@@ -13,7 +13,7 @@ This guide is for Microsoft Edge, also works with most Chromium based browsers.
 
 ### Upgrade your Microsoft Edge to latest version
 
-Make sure you have installed latest Microsoft Edge, or you can download [here](https://www.microsoft.com/edge/).
+Make sure you have installed the latest version of Microsoft Edge, or you can download it [here](https://www.microsoft.com/edge/).
 
 ### Go to Settings
 
@@ -21,7 +21,7 @@ Input `edge://settings/privacy/security` in address bar.
 
 ### Set DNS.SB DoH Server
 
-On `Use secure DNS` section, enable it, choose `Choose a service provider` and input:
+In the `Use secure DNS` section, enable it, choose `Choose a service provider`, and enter:
 
 ```
 https://doh.dns.sb/dns-query
