--- a/src/pages/doh/firefox.mdx
+++ b/src/pages/doh/firefox.mdx
@@ -11,7 +11,7 @@ import StepContainer from '../../components/step-container'
 
 ### Upgrade your Firefox to latest version
 
-Make sure you have installed latest Firefox, or you can download [here](https://www.mozilla.org/en-US/firefox/all/).
+Make sure you have installed the latest version of Firefox, or you can download it [here](https://www.mozilla.org/en-US/firefox/all/).
 
 ### Go to Settings
 
@@ -20,7 +20,7 @@ Input `about:preferences` in address bar and search `DNS over HTTPS` on search b
 
 ### Set DNS.SB DoH Server
 
-On `Enable DNS over HTTPS using` page, choose `Increased Protection`, choose provider as `Custom`, and input:
+On the `Enable DNS over HTTPS using` page, choose `Increased Protection`, select provider as `Custom`, and enter:
 
 ```
 https://doh.dns.sb/dns-query
