--- a/src/pages/doh/linux.mdx
+++ b/src/pages/doh/linux.mdx
@@ -51,7 +51,7 @@ example.com.		1094	IN	A	93.184.216.34
 ;; MSG SIZE  rcvd: 56
 ```
 
-We can see the response server  `SERVER: 127.0.0.1#53(127.0.0.1)` is working fine.
+We can see from the response that the server `SERVER: 127.0.0.1#53(127.0.0.1)` is working correctly.
 
 ### Keep DNS Proxy running in background
 
