--- a/src/pages/doh/vivaldi.mdx
+++ b/src/pages/doh/vivaldi.mdx
@@ -11,7 +11,7 @@ import StepContainer from '../../components/step-container'
 
 ### Upgrade your Vivaldi to latest version
 
-Make sure you have installed latest Vivaldi, or you can download [here](https://vivaldi.com/download/).
+Make sure you have installed the latest version of Vivaldi, or you can download it [here](https://vivaldi.com/download/).
 
 ### Go to Settings
 
@@ -19,7 +19,7 @@ Input `vivaldi:settings/network/` in address bar or use `ctrl` + `F12` to open s
 
 ### Set DNS.SB DoH Server
 
-On `Network` section, or you can search `DNS Over HTTPS`, then enable `DNS Over HTTPS`, choose `Custom DNS Provider` and input:
+In the `Network` section (or you can search for `DNS Over HTTPS`), enable `DNS Over HTTPS`, choose `Custom DNS Provider`, and enter:
 
 ```
 https://doh.dns.sb/dns-query
