--- a/src/pages/dot/linux.mdx
+++ b/src/pages/dot/linux.mdx
@@ -85,5 +85,5 @@ example.com.		3309	IN	A	93.184.216.34
 </StepContainer>
 
 <Callout type="info">
-We can see the resonse DNS server is `127.0.0.53#53(127.0.0.53)`, which is working fine.
+We can see that the response DNS server is `127.0.0.53#53(127.0.0.53)`, which indicates it is working correctly.
 </Callout>
