--- a/src/pages/dot/windows.mdx
+++ b/src/pages/dot/windows.mdx
@@ -31,7 +31,7 @@ Choose Type to `DNS over TLS`, set `IP address and optional port:` to our IP:
 185.222.222.222
 ```
 
-Under `DNS over TLS options`, set `Hostname` to out hostname:
+Under `DNS over TLS options`, set `Hostname` to our hostname:
 
 ```
 dot.sb
