--- a/src/pages/guide/index.mdx
+++ b/src/pages/guide/index.mdx
@@ -29,7 +29,7 @@ import { Callout } from 'nextra-theme-docs'
 2a11::
 ```
 
-You may need IPv6 with full address in some old devices:
+You may need to use the full IPv6 address on some older devices:
 
 ```
 2a09:0000:0000:0000:0000:0000:0000:0000
