--- a/src/pages/guide/ios.mdx
+++ b/src/pages/guide/ios.mdx
@@ -13,7 +13,7 @@ import StepContainer from '../../components/step-container'
 
 ![5k0i.png](https://s3.image.hosting/2021/07/02/5k0i.png)
 
-### Click on the `i` button on right of your connected Wi-Fi
+### Tap the `i` button to the right of your connected Wi-Fi network
 
 ![5w3l.png](https://s3.image.hosting/2021/07/02/5w3l.png)
 
