--- a/src/pages/guide/linux.mdx
+++ b/src/pages/guide/linux.mdx
@@ -40,7 +40,7 @@ nameserver 2a09::
 nameserver 2a11::
 ```
 
-You can also lock this file for security purpose
+You can also lock this file for security purposes
 
 ### First, install `e2fsprogs`:
 
@@ -74,7 +74,7 @@ Or unlock it with `sudo chattr -i /etc/resolv.conf`
 
 ## Ubuntu 18.04 and later
 
-Since Ubuntu 18.04, you shoud make the change in netplan configs at `/etc/netplan/*.yaml`, this file could be `50-cloud-init.yaml` or something like `01-netcfg.yaml`
+Since Ubuntu 18.04, you should make the change in netplan configs at `/etc/netplan/*.yaml`. This file could be `50-cloud-init.yaml` or something like `01-netcfg.yaml`
 
 <StepContainer>
 
