--- a/src/pages/guide/macos.mdx
+++ b/src/pages/guide/macos.mdx
@@ -17,7 +17,7 @@ If you are on Wi-Fi, select `Wi-Fi` and if you are on Ethernet, select `Ethernet
 
 ### When you are on Ethernet, click on `Details...` button, and select `DNS`:
 
-Delete the old records add DNS.SB's servers
+Delete the old records and add DNS.SB's servers
 
 ```
 185.222.222.222
@@ -39,7 +39,7 @@ Delete the old records add DNS.SB's servers
 
 ### When you are on Wi-Fi, click on `Details...` button from the connected network, and select `DNS`:
 
-Delete the old records add DNS.SB's servers
+Delete the old records and add DNS.SB's servers
 
 ```
 185.222.222.222
