--- a/src/pages/guide/windows.mdx
+++ b/src/pages/guide/windows.mdx
@@ -1,6 +1,6 @@
 ---
 title: "How to change DNS settings on Windows"
-description: "How to set DNS.SB's regular DNS on on Windows"
+description: "How to set DNS.SB's regular DNS on Windows"
 ---
 
 import StepContainer from '../../components/step-container'
@@ -37,7 +37,7 @@ Change from `Automatic (DHCP)` to `Manual` and then add DNS.SB's servers:
 
 For IPv4
 
-**Preffered DNS**
+**Preferred DNS**
 
 ```
 185.222.222.222
@@ -53,7 +53,7 @@ For IPv4
 
 For IPv6
 
-**Preffered DNS**
+**Preferred DNS**
 
 ```
 2a09::
@@ -101,7 +101,7 @@ In the Ethernet Properties windows, select `Internet Protocol Version 4 (TCP/IPv
 
 In `Internet Protocol Version 4 (TCP/IPv4) Properties`, select `Use the following DNS server addresses`, and add our DNS servers
 
-**Preffered DNS server**
+**Preferred DNS server**
 
 ```
 185.222.222.222
@@ -125,7 +125,7 @@ Select `Internet Protocol Version 6 (TCP/IPv6)`, then click `Properties`
 
 Click `Use The Following DNS Server Addresses` and add our DNS servers
 
-**Preffered DNS server**
+**Preferred DNS server**
 
 ```
 2a09::
