--- a/src/pages/doh/chrome.mdx
+++ b/src/pages/doh/chrome.mdx
@@ -13,7 +13,7 @@ This guide is for Google Chrome, also works with most Chromium based browsers.
 
 ### Upgrade your Chrome to latest version
 
-Make sure you have installed latest Chrome, or you can download [here](https://www.google.com/chrome/).
+Make sure you have installed the latest version of Chrome, or you can download it [here](https://www.google.com/chrome/).
 
 ### Go to Settings
 
@@ -21,7 +21,7 @@ Input `chrome://settings/security` in address bar.
 
 ### Set DNS.SB DoH Server
 
-On `Advanced` section, enable `Use secure DNS`, choose `Add custom DNS service provider` and input:
+In the `Advanced` section, enable `Use secure DNS`, choose `Add custom DNS service provider`, and enter:
 
 ```
 https://doh.dns.sb/dns-query
